{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 57,
  "lineage": "f4adc3e8-ae56-2d5b-da17-a7a95e79b2e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bfdd733094a46a0b",
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:instance/i-0084287a421a1f6d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0084287a421a1f6d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thekeypair2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03229d7b13d9833bb"
              }
            ],
            "primary_network_interface_id": "eni-03229d7b13d9833bb",
            "private_dns": "ip-10-0-0-13.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_ip": "122.248.229.29",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001a088de81bdce79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04788cf322d2601fe",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed69fe59892ad9f5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "i-0084287a421a1f6d9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.kkey",
            "aws_security_group.sg",
            "aws_subnet.publicsub",
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:internet-gateway/igw-069b941af5594b554",
            "id": "igw-069b941af5594b554",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-08755a2ce4de76b12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:route-table/rtb-059ce83c5cdb834df",
            "id": "rtb-059ce83c5cdb834df",
            "owner_id": "801681997870",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069b941af5594b554",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08755a2ce4de76b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "rtb-059ce83c5cdb834df",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8fae171f2cb9dd4",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-059ce83c5cdb834df",
            "subnet_id": "subnet-04788cf322d2601fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicRT",
            "aws_subnet.publicsub",
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:security-group/sg-0ed69fe59892ad9f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed69fe59892ad9f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from the http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.37.211.173/32"
                ],
                "description": "from the ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC_security",
            "name_prefix": "",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "vpc-securitygp"
            },
            "tags_all": {
              "name": "vpc-securitygp"
            },
            "timeouts": null,
            "vpc_id": "vpc-08755a2ce4de76b12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "sg-0ed69fe59892ad9f5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:subnet/subnet-04788cf322d2601fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04788cf322d2601fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801681997870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-08755a2ce4de76b12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "801681997870",
            "id": "subnet-04788cf322d2601fe",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.VPCrevolution"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCrevolution",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:801681997870:vpc/vpc-08755a2ce4de76b12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031d88489df78d6e2",
            "default_route_table_id": "rtb-079bbb36c8c712737",
            "default_security_group_id": "sg-025d4832eec77dcc6",
            "dhcp_options_id": "dopt-0d67709be680d3ba8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08755a2ce4de76b12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079bbb36c8c712737",
            "owner_id": "801681997870",
            "region": "ap-southeast-1",
            "tags": {
              "name": "terraformvpc"
            },
            "tags_all": {
              "name": "terraformvpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}